; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_stac9766.c_stac9766_set_bias_level.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/codecs/extr_stac9766.c_stac9766_set_bias_level.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_codec = type { i32 }

@AC97_POWERDOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_codec*, i32)* @stac9766_set_bias_level to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stac9766_set_bias_level(%struct.snd_soc_codec* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_soc_codec*, align 8
  %4 = alloca i32, align 4
  store %struct.snd_soc_codec* %0, %struct.snd_soc_codec** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %14 [
    i32 130, label %6
    i32 129, label %6
    i32 128, label %6
    i32 131, label %10
  ]

6:                                                ; preds = %2, %2, %2
  %7 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %3, align 8
  %8 = load i32, i32* @AC97_POWERDOWN, align 4
  %9 = call i32 @stac9766_ac97_write(%struct.snd_soc_codec* %7, i32 %8, i32 0)
  br label %14

10:                                               ; preds = %2
  %11 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %3, align 8
  %12 = load i32, i32* @AC97_POWERDOWN, align 4
  %13 = call i32 @stac9766_ac97_write(%struct.snd_soc_codec* %11, i32 %12, i32 65535)
  br label %14

14:                                               ; preds = %2, %10, %6
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.snd_soc_codec*, %struct.snd_soc_codec** %3, align 8
  %17 = getelementptr inbounds %struct.snd_soc_codec, %struct.snd_soc_codec* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  ret i32 0
}

declare dso_local i32 @stac9766_ac97_write(%struct.snd_soc_codec*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
